examples/test/testpolicy19882.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19882
  namespace: namespace426
spec:
  podSelector:
    matchLabels:
      key32: value2
      key30: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value13
      podSelector:
        matchLabels:
          key23: value37
          key43: value34
          key6: value11
